<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <DUT Name="ST_Device" Id="{bc9ee667-91fb-46f2-af26-3ee8851b76e5}">
    <Declaration><![CDATA[TYPE ST_Device :
STRUCT
	//IO
	stAxis	:	AXIS_REF;
	//The following limit switches must be TRUE or high (ie. NC) to enable that direction of motion
	//The EPICS display should show an inverted indicator to communicate end of travel reached
	i_xLoLim	AT %I*	:	BOOL; //Wire normally-closed
	i_xHiLim	AT %I*	:	BOOL; //Wire normally-closed
	
	//Acuator Parameters
	lrUpperPositionLimit	:	LREAL := 10000000000; //Use in conjuntion with limit switches or set to a huge number to ignore
	lrLowerPositionLimit	:	LREAL := -10000000000; //Use in conjuntion with limit switches or set to a huge number to ignore
	
	xEnable	:	BOOL := TRUE;
	
	//Supervisory System
	
	//Device States
	astStates	:	ARRAY[1..PMPS_GVL_BeamParams.cnMaxStateArrayLen] OF	ST_DeviceState;
	
	stTransitionState	:	ST_DeviceState; //The transition state might have non-zero beam parameters
	
	nRequestedState	:	INT; //EPICS control, cleaned (checked against array limits) and deposited in nTargetState
	nTargetState	:	INT; //The requested state should be deposited here after cleaning
	nActiveState	:	INT; //The last successfully reached state
	
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>