<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.10">
  <DUT Name="ST_DeviceState" Id="{83155e5b-c608-4d41-b295-c67628bd27d3}">
    <Declaration><![CDATA[TYPE ST_DeviceState :
STRUCT
	
	//Database key
	
	//Parent Device
	sParentDevice	:	STRING;
	
	//State name
	sStateName	:	STRING;
	
	//Beam Power Class
	bBeamClass	:	UINT;
	
	//Attenuation
	arAttenuation	ARRAY[1..16] OF UINT;
	
	//

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>