<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <POU Name="F_SafeBPCompare" Id="{802803eb-2439-4113-8ed8-fad36423df22}" SpecialFunc="None">
    <Declaration><![CDATA[(*Compares BeamParam1 to BeamParam2, if all parameters of BeamParam1 are more conservative than BeamParam2
the result will be true *)
FUNCTION F_SafeBPCompare : BOOL
VAR_INPUT
	BeamParam1	:	ST_BeamParams;
	BeamParam2	:	ST_BeamParams;
END_VAR
VAR
	// Internal Attenuation OK boolean
	xAttOK: BOOL := FALSE;
	// Internal Per-pulse energy OK boolean
	xPPmjOK: BOOL := FALSE;
	// Internal photon energy OK boolean
	xEvOK: BOOL := FALSE;
	// Internal Beam Rate OK boolean
	xRateOK: BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[xAttOK := BeamParam1.fAtt >= BeamParam2.fAtt;
xPPmjOK := BeamParam1.fPP_mJ <= BeamParam2.fPP_mJ;
xEvOK := BeamParam1.fUpper_eV <= BeamParam2.fUpper_eV AND
	BeamParam1.fLower_eV >= BeamParam2.fLower_eV;

xRateOK	:= BeamParam1.nRate <= BeamParam2.nRate;

F_SafeBPCompare := xAttOK AND xPPmjOK AND xEvOK AND xRateOK;]]></ST>
    </Implementation>
    <LineIds Name="F_SafeBPCompare">
      <LineId Id="8" Count="0" />
      <LineId Id="21" Count="2" />
      <LineId Id="40" Count="0" />
      <LineId Id="9" Count="1" />
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>