<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <POU Name="F_SetBeamParams" Id="{4c1793f1-8a27-0a2c-0990-5356f1b410e4}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION F_SetBeamParams : ST_BeamParams
VAR_INPUT
	fAtt	:	REAL := 100;
	fPP_mJ: REAL := 0;
	fLower_eV: REAL := 0;
	fUpper_eV: REAL := 1500;
END_VAR
VAR
	BeamParams	:	ST_BeamParams;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[BeamParams.fAtt := LIMIT(0,fAtt,100);
BeamParams.fPP_mJ := LIMIT(0,fPP_mJ,20);
BeamParams.fLower_eV := LIMIT(0,fLower_eV,fUpper_eV);
BeamParams.fUpper_eV := LIMIT(BeamParams.fLower_eV, fUpper_eV, 1500);
BeamParams.fLower_eV := MIN(BeamParams.fLower_eV, BeamParams.fUpper_eV);

F_SetBeamParams	:= BeamParams;]]></ST>
    </Implementation>
    <LineIds Name="F_SetBeamParams">
      <LineId Id="7" Count="0" />
      <LineId Id="13" Count="1" />
      <LineId Id="16" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="10" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>